added new masking and notebook that calculates transforms

--- a/mask_from_mp4.ipynb
+++ b/mask_from_mp4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +48,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(53, 256, 256) (53, 256, 256, 3)\n"
+     ]
+    }
+   ],
    "source": [
+    "masks = np.asarray(masks)\n",
+    "frames = np.asarray(frames)\n",
+    "print(masks.shape, frames.shape)\n",
+    "\n",
     "frame_list = []\n",
     "for frame in frames:\n",
     "    frame_list.append(np.array(frame))\n",
-    "np.save(open(\"./data/storm_frames.npy\", \"wb\"), np.array(frame_list))"
+    "# np.save(open(\"./data/storm_frames.npy\", \"wb\"), np.array(frame_list))"
    ]
   },
   {
